--- a/gestion.tex
+++ b/gestion.tex
@@ -1,5 +1,5 @@
 \chapter{Gestión y Calidad de Proyectos de Software Libre}
-\chapterauthor{Borello Agustin, Donato Alexis, Lopez Marcos, Mattio Pablo, Vilardo Milena}
+\chapterauthor{Borello Agustín, Donato Alexis, López Marcos, Mattio Paolo, Vilardo Milena}
 
 \section{Qué es una comunidad de Software Libre}
 
@@ -9,7 +9,7 @@ Una Comunidad de Software Libre es un {\bf grupo de personas que cooperan entre 
 Pero todas tienen en común:
 \begin{itemize}
      \item El espíritu cooperativo. 
-     \item La búsqueda continua del mejoramiento y difusión del software libre y del conocimiento.
+     \item La búsqueda continua del mejoramiento y difusión del Software Libre y del conocimiento.
      \item Su principal interés es la libertad de los usuarios
      \item Hay un dominio o interés compartido que le da identidad.
      \item La comunidad es creada y mantenida a partir de las interacciones determinadas, por ejemplo, por actividades conjuntas o discusiones.
@@ -21,17 +21,17 @@ La comunidad de código abierto es diversa y esta altamente motivada. Las comuni
 \\
 El éxito de una iniciativa de código abierto depende de: {\bf la sensibilización y la adopción del proyecto}. Manteniendo los foros con vida a través de la información, preguntas y desafíos.
 %\pagebreak
-Uno de los casos conocidos de éxito de una comunidad de software libre es el estilo de desarrollo de Linus Torvalds en el cual se destaca, lanzar versiones de prueba enseguida y a menudo, delegar cuanto sea posible. La comunidad Linux, parecía semejarse a un gran bazar bullicioso con diferentes agendas y enfoques (adecuadamente reflejado por los depósitos de software Linux, que admitían contribuciones de cualquiera) del cual solo parecía posible que emergiera un sistema coherente y estable mediante una sucesión de milagros. 
+Uno de los casos conocidos de éxito de una comunidad de Software Libre es el estilo de desarrollo de Linus Torvalds en el cual se destaca, lanzar versiones de prueba enseguida y a menudo, delegar cuanto sea posible. La comunidad Linux, parecía semejarse a un gran bazar bullicioso con diferentes agendas y enfoques (adecuadamente reflejado por los depósitos de software Linux, que admitían contribuciones de cualquiera) del cual solo parecía posible que emergiera un sistema coherente y estable mediante una sucesión de milagros. 
 
-\section{¿ Quiénes pertenecen a una comunidad?}
+\section{¿Quiénes pertenecen a una comunidad?}
 
 Las personas que forman parte de una comunidad de SL pueden ser usuarios, desarrolladores, distribuidores, soportistas, traductores entre otras cosas. Las comunidades pueden abarcar todas estas áreas, o enfocarse en algunas específicas.
 \\
 \\
-Se puede deducir que existe una gran influencia universitaria en el software libre. Esto no es de extrañar, ya que, como se ha podido ver en el capítulo de historia, el software libre –{\bf antes incluso de llevar esta denominación}– ha estado íntimamente ligado a las instituciones educativas superiores. Aún hoy, el verdadero motor del uso y expansión del software libre siguen siendo las universidades y los grupos de usuarios estudiantiles. No es, por tanto, de extrañar que más de un 70\% de los desarrolladores cuenten con una preparación universitaria. El dato tiene mayor importancia si tenemos en cuenta que del 30\% restante muchos no son universitarios porque todavía están en su fase escolar. Aun así, también tienen cabida –{\bf y no por ello son menos apreciados}– desarrolladores que no han accedido nunca a estudios superiores, pero que son amantes de la informática.
+Se puede deducir que existe una gran influencia universitaria en el Software Libre. Esto no es de extrañar, ya que, como se ha podido ver en el capítulo de historia, el Software Libre –{\bf antes incluso de llevar esta denominación}– ha estado íntimamente ligado a las instituciones educativas superiores. Aún hoy, el verdadero motor del uso y expansión del Software Libre siguen siendo las universidades y los grupos de usuarios estudiantiles. No es, por tanto, de extrañar que más de un 70\% de los desarrolladores cuenten con una preparación universitaria. El dato tiene mayor importancia si tenemos en cuenta que del 30\% restante muchos no son universitarios porque todavía están en su fase escolar. Aun así, también tienen cabida –{\bf y no por ello son menos apreciados}– desarrolladores que no han accedido nunca a estudios superiores, pero que son amantes de la informática.
 \\
 \\
-Dentro de las comunidades de software libre existe un conjunto de pasos que facilita al simple usuario transformarse en un activo participante del proyecto, tales como: 
+Dentro de las comunidades de Software Libre existe un conjunto de pasos que facilita al simple usuario transformarse en un activo participante del proyecto, tales como: 
 
 \begin{itemize}
      \item Ganar experiencia instalando el software en su computadora o en un servidor Web. 
@@ -43,18 +43,18 @@ Dentro de las comunidades de software libre existe un conjunto de pasos que faci
      \item Entregar parches y módulos para revisión por pares e incorporarlos en el tronco principal del proyecto.
 \end{itemize}
 %\newpage
-Por otro lado, también se ha podido constatar una gran interdisciplinariedad: uno de cada cinco desarrolladores proviene de campos diferentes al de las tecnologías de la información. Esto, unido al hecho de que existe también un número similar de desarrolladores no universitarios, refleja la existencia de una gran riqueza en cuanto a intereses, procedencias y, en definitiva, a la composición de los equipos de desarrollo. Es muy difícil encontrar una industria moderna donde el grado de heterogeneidad sea tan grande como el que se puede ver en el software libre, si es que existe.
+Por otro lado, también se ha podido constatar una gran interdisciplinariedad: uno de cada cinco desarrolladores proviene de campos diferentes al de las tecnologías de la información. Esto, unido al hecho de que existe también un número similar de desarrolladores no universitarios, refleja la existencia de una gran riqueza en cuanto a intereses, procedencias y, en definitiva, a la composición de los equipos de desarrollo. Es muy difícil encontrar una industria moderna donde el grado de heterogeneidad sea tan grande como el que se puede ver en el Software Libre, si es que existe.
 \\
 \\
-En cualquier caso, dentro de una comunidad la mayoría quiere aprender y desarrollar nuevas habilidades ({\bf acerca de un 80\%}) y que muchos lo hacen para compartir conocimientos y habilidades ({\bf 50\%}) o para participar en una nueva forma de cooperación ({\bf alrededor de un tercio}). El primer dato no parece nada sorprendente, habida cuenta de que un profesional con mayores conocimientos se encuentra más cotizado que uno que no los posee. El segundo dato, sin embargo, no es tan fácil de explicar e incluso parece ir en contra de la afirmación de Nikolai Bezroukov, que viene a decir que los líderes de los proyectos de software libre tienen a buena cuenta no compartir toda la información de la que poseen para perpetuar su poder. Mientras tanto, la tercera opción más frecuente es, sin lugar a dudas, fiel reflejo de que los propios desarrolladores se muestran entusiasmados por la forma en la que generalmente se crea el software libre; es difícil encontrar una industria en la que un grupo de voluntarios levemente organizados pueda plantar cara tecnológicamente a las grandes compañías del sector.
+En cualquier caso, dentro de una comunidad la mayoría quiere aprender y desarrollar nuevas habilidades ({\bf acerca de un 80\%}) y que muchos lo hacen para compartir conocimientos y habilidades ({\bf 50\%}) o para participar en una nueva forma de cooperación ({\bf alrededor de un tercio}). El primer dato no parece nada sorprendente, habida cuenta de que un profesional con mayores conocimientos se encuentra más cotizado que uno que no los posee. El segundo dato, sin embargo, no es tan fácil de explicar e incluso parece ir en contra de la afirmación de Nikolai Bezroukov, que viene a decir que los líderes de los proyectos de Software Libre tienen a buena cuenta no compartir toda la información de la que poseen para perpetuar su poder. Mientras tanto, la tercera opción más frecuente es, sin lugar a dudas, fiel reflejo de que los propios desarrolladores se muestran entusiasmados por la forma en la que generalmente se crea el Software Libre; es difícil encontrar una industria en la que un grupo de voluntarios levemente organizados pueda plantar cara tecnológicamente a las grandes compañías del sector.
 \\
 \\
-La gente que dedica su tiempo al software libre en líneas generales podemos afirmar que el desarrollador de software libre es un varón joven con estudios universitarios ({\bf o en vías de conseguirlos}). La relación del mundo del software libre con la universidad ({\bf estudiantes y profesores}) es muy estrecha, aunque sigue predominando el desarrollador que no tiene que ver nada con el ámbito académico. En cuanto a la dedicación en número de horas, se ha mostrado cómo existe una gran desigualdad al estilo de la postulada en la ley de Pareto. 
-Las motivaciones de los desarrolladores –{\bf según ellos mismos}– lejos de ser monetarias y egocéntricas, tal y como suelen asumir economistas y psicólogos, está más bien centrada en compartir y aprender. \emph{Para finalizar, se puede decir que los personajes del mundo del software libre, en el cual la reputación en la gran comunidad del software libre suele depender de más razones que solamente de la codificación de una aplicación libre exitosa}.
+En cuanto a la gente que dedica su tiempo al Software Libre, en líneas generales podemos afirmar que el desarrollador es un varón joven con estudios universitarios ({\bf o en vías de conseguirlos}). La relación del mundo del Software Libre con la universidad ({\bf estudiantes y profesores}) es muy estrecha, aunque sigue predominando el desarrollador que no tiene que ver nada con el ámbito académico. En cuanto a la dedicación en número de horas, se ha mostrado cómo existe una gran desigualdad al estilo de la postulada en la ley de Pareto. 
+Las motivaciones de los desarrolladores –{\bf según ellos mismos}– lejos de ser monetarias y egocéntricas, tal y como suelen asumir economistas y psicólogos, está más bien centrada en compartir y aprender. \emph{Para finalizar, se puede decir de los personajes del mundo del Software Libre, que la reputación en la gran comunidad del Software Libre suele depender de más razones que solamente de la codificación de una aplicación libre exitosa}.
 
-\section{¿ Qué roles exiten?}
+\section{¿Qué roles existen?}
 
-Dentro de las comunidades de software libre existen varios roles, cada uno de estos aportan al mismo en mayor o menor medida de acuerdo a la categoría:
+Dentro de las comunidades de Software Libre existen varios roles, cada uno de estos aportan al mismo en mayor o menor medida de acuerdo a la categoría:
 \begin{itemize}
      \item \textbf{Usuario}
      \item \textbf{Contribuyente}
@@ -65,19 +65,17 @@ Dentro de las comunidades de software libre existen varios roles, cada uno de es
 
 \textbf{Contribuyente:} Muchas personas quieren ayudar a proyectos con código, documentación, empaquetado, etcétera, pero no están listos para hacer el compromiso (o no tienen la experiencia) de ser mantenedores. Los contribuyentes hacen compromisos no triviales con el proyecto, pero usualmente a una intensidad menor que los mantenedores. Los colaboradores pueden reportar errores, pero a menudo arreglan los que encuentran, o al menos investigan sus causas.
 
-\textbf{Mantenedor:} Los mantenedores son los líderes del proyecto; Comprometen mucho tiempo, energía y emoción en sus proyectos. Normalmente, un mantenedor será el árbitro final de cualquier problema de diseño o codificación que surja dentro del proyecto. Es un título de prestigio, pero requiere esfuerzo para ganar y una inversión sustancial para mantener.
+\textbf{Mantenedor:} Los mantenedores son los líderes del proyecto; comprometen mucho tiempo, energía y emoción en sus proyectos. Normalmente, un mantenedor será el árbitro final de cualquier problema de diseño o codificación que surja dentro del proyecto. Es un título de prestigio, pero requiere esfuerzo para ganar y una inversión sustancial para mantener.
 
 
-\section{¿ Como se ingresa?}
-Si aprendimos sobre Software libre y te gustaría ayudar, entonces la siguiente pregunta es, ¿ qué te gustaría hacer?, se puede ayudar de muchas maneras,como Fred Brook señalo, \textit{hay mucho mas para construir productos de software exitoso que simplemente escribir un programa de computadora}, se necesita gente que escriba documentos como libros, guías de referencia e información en linea, también que escriba software, investigue y muchas otras tareas, no tienes que ser un desarrollador de software con experiencia para ayudar, respondida esta pregunta es como nos introducimos a una comunidad haciendo contacto con un miembro de ella para empezar aportar de acuerdo a nuestro perfil y la cantidad de tiempo que dispongamos.
+\section{¿Cómo se ingresa?}
+Si aprendimos sobre Software Libre y te gustaría ayudar, entonces la siguiente pregunta es, ¿qué te gustaría hacer?, se puede ayudar de muchas maneras, como Fred Brooks señaló, \textit{hay mucho más para construir productos de software exitoso que simplemente escribir un programa de computadora}, se necesita gente que escriba documentos como libros, guías de referencia e información en linea, también que escriba software, investigue y muchas otras tareas, no tienes que ser un desarrollador de software con experiencia para ayudar. Respondida esta pregunta es como nos introducimos a una comunidad haciendo contacto con un miembro de ella para empezar aportar de acuerdo a nuestro perfil y la cantidad de tiempo que dispongamos.
  
 
-\section{¿ Cómo se gestiona una comunidad de Software Libre?}
+\section{¿Cómo se gestiona una comunidad de Software Libre?}
 La catedral y el bazar es un ensayo sobre el software de código abierto, escrito por el hacktivista \textit{Eric S. Raymond} en 1997. 
 
-Cuidadosamente ensamblados por trabajadores en un espléndido aislamiento, sin que hubiera lugar al lanzamiento de versiones de prueba antes de que hubiera llegado el momento.
-
-El ensayo analiza dos modelos de producción de software bien diferenciados. Por un lado, la catedral, que representa el modelo de desarrollo más hermético y vertical característico del Software propietario, cuidadosamente ensamblados por trabajadores en un espléndido aislamiento, sin que hubiera lugar al lanzamiento de versiones de prueba antes de que hubiera llegado el momento; y por el otro el bazar, con su dinámica horizontal y "bulliciosa", con diferentes agendas y enfoques del cual solo parecía posible que emergiera un sistema coherente y estable mediante una sucesión de milagros, que caracterizó al desarrollo del kernel Linux y otros proyectos de software libre que se potenciaron con el trabajo comunitario a través de Internet del código abierto.
+El ensayo analiza dos modelos de producción de software bien diferenciados. Por un lado, la catedral, que representa el modelo de desarrollo más hermético y vertical característico del software propietario, cuidadosamente ensamblados por trabajadores en un espléndido aislamiento, sin que hubiera lugar al lanzamiento de versiones de prueba antes de que hubiera llegado el momento; y por el otro el bazar, con su dinámica horizontal y "bulliciosa", con diferentes agendas y enfoques del cual solo parecía posible que emergiera un sistema coherente y estable mediante una sucesión de milagros. Este último modelo caracterizó al desarrollo del kernel Linux y otros proyectos de Software Libre que se potenciaron con el trabajo comunitario a través de Internet del código abierto.
 
 Estilo de desarrollo de Linus Torvalds     
 \begin{itemize}
@@ -87,19 +85,19 @@ Estilo de desarrollo de Linus Torvalds
      \item Estar abierto al cambio
 \end{itemize}
 
-\textbf Libere pronto, Libere a menudo. Y escucha a los usuarios
+\textbf{Libere pronto, Libere a menudo. Y escucha a los usuarios}
 \begin{itemize}
 \item Minimizar la redundancia de esfuerzos mediante la difusión rápida de correcciones ya realizadas.
-\item Continuo estímulo y una recompensa constante a los usuarios 
-\item Constante revision en cada publicacion. Con el potencial de detectar los errores de forma temprana.
+\item Continuo estímulo y una recompensa constante a los usuarios.
+\item Constante revisión en cada publicación. Con el potencial de detectar los errores de forma temprana.
 \item Menor costo en caso de error.
 \end{itemize}
 
-\textbf Delegar cuando sea posible
+\textbf{Delegar cuando sea posible}
 
-Aquel que dependa tan sólo de su cerebro al desarrollar un sistema va estar siempre en desventaja frente al que sepa cómo crear un ambiente abierto y en evolución, en el cual la búsqueda de errores y las mejoras se confíen a cientos de personas.  
+Aquel que dependa tan sólo de su cerebro al desarrollar un sistema va a estar siempre en desventaja frente al que sepa cómo crear un ambiente abierto y en evolución, en el cual la búsqueda de errores y las mejoras se confíen a cientos de personas.  
 
-\textbf Hacer crecer la comunidad
+\textbf{Hacer crecer la comunidad}
 
 Tratar a tus usuarios como colaboradores es el camino menos complicado para mejorar con rapidez y depurar eficazmente un programa.
 
@@ -107,67 +105,64 @@ Dada una base lo suficientemente amplia de probadores y colaboradores, casi todo
 
 Un número mayor de usuarios encuentra más errores debido a que añade muchas más formas diferentes de forzar el programa.
 
+\textbf{Contexto social de las comunidades de Software Libre} 
 
-Contexto social de las comunidades de Software Libre 
-
-Una comunidad de software libre se asemeja mucho aspectos a un mercado libre o sistema ecológico.
-Una colección de agentes autónomos que intentan maximizar la utilidad en un proceso que termina en un orden derivado de la autocorrección mucho mas eficiente y elaborado de lo que hubiera podido lograr cualquier cantidad de planificación
-Para trabajar y competir con eficacia, programadores que quieran desarrollar un proyecto en colaboración deben aprender a reclutar y motivar a la gente en base a intereses comunes
-
-Una forma de conectar la individualidad de los colaboradores tan firmemente como fuera posible para llevarla a culminar objetivos difíciles solo alcanzables mediante una colaboración sostenida. 
+Una comunidad de Software Libre se asemeja mucho aspectos a un mercado libre o sistema ecológico.
+Una colección de agentes autónomos que intentan maximizar la utilidad en un proceso que termina en un orden derivado de la autocorrección mucho mas eficiente y elaborado de lo que hubiera podido lograr cualquier cantidad de planificación.
+Para trabajar y competir con eficacia, programadores que quieran desarrollar un proyecto en colaboración deben aprender a reclutar y motivar a la gente en base a intereses comunes, una forma de conectar la individualidad de los colaboradores tan firmemente como fuera posible para llevarla a culminar objetivos difíciles solo alcanzables mediante una colaboración sostenida. 
 
 Esto no quiere decir que la visión y la brillantez individual ya no importan. Los proyectos más trascendentales en el mundo del software abierto serán los de aquellos que comiencen a partir de la visión y la brillantez individual, y amplifiquen su importancia mediante la construcción eficaz de grupos con intereses comunes. 
 
 
-\section{¿ Cómo se toman las desiciones?}
+\section{¿Cómo se toman las decisiones?}
 
-Las desiciones se toman teniendo en cuenta aspectos tales como:
+Las decisiones se toman teniendo en cuenta aspectos tales como:
 \begin{itemize}
      \item Nivel de impacto
      \item Experiencia de los miembros de la comunidad
      \item Diferentes áreas del proyecto
 \end{itemize}
 
-Las desiciones más importantes son tomadas por un grupo de personas a cargo, generalmente desiciones respecto al core. Para desiciones de menor impacto las discuciones son menos, como la mejora de caracteristicas de un paquete.
-Dentro de un proyecto de software existen direfentes áreas por lo que sus respectivos líderes son los encargados de guiar a sus miembros al objetivo que se halla planteado.
+Las decisiones más importantes son tomadas por un grupo de personas a cargo, generalmente decisiones respecto al core. Para decisiones de menor impacto las discusiones son menos, como la mejora de características de un paquete.
+Dentro de un proyecto de software existen diferentes áreas por lo que sus respectivos líderes son los encargados de guiar a sus miembros al objetivo que se haya planteado.
 \\
 \\
-Ahora partiendo de esto, se pueden nombrar distintos tipos de proyectos de fuentes abiertas basandose en como se lleva a cabo el proceso de toma de decisiones en estos y como esta compuesta su estructura interna. Estos pueden ser:
+Ahora partiendo de esto, se pueden nombrar distintos tipos de proyectos de fuentes abiertas basándose en como se lleva a cabo el proceso de toma de decisiones en estos y como esta compuesta su estructura interna. Estos pueden ser:
 \begin{itemize}
-    \item Monarquista: Donde las decisiones mas importantes del proyecto son llevadas a cabo por una persona o lider (Ejemplo, Linux).
-    \item Comunitaria: Se toman las decisiones de manera democratica y no existe una persona o rol central en el proyecto (Ejemplo, PostgreSQL).
+    \item Monarquista: Donde las decisiones mas importantes del proyecto son llevadas a cabo por una persona o líder (Ejemplo, Linux).
+    \item Comunitaria: Se toman las decisiones de manera democrática y no existe una persona o rol central en el proyecto (Ejemplo, PostgreSQL).
     \item Corporativa: El proyecto pertenece a una empresa privada y esta es la que toma las decisiones en el proyecto de manera formal (Ejemplo, Fedora).
-    \item Fundacion: Similar a corporativa, pero el proyecto pertenece a una fundacion sin fines de lucro, por lo que tiene estructura y toma de decisiones formales (Ejemplo, Firefox).
+    \item Fundación: Similar a corporativa, pero el proyecto pertenece a una fundación sin fines de lucro, por lo que tiene estructura y toma de decisiones formales (Ejemplo, Firefox).
 \end{itemize}
 
-Ademas, otro aspecto importante en la toma de decisiones dentro de un proyecto de software libre es la {\bf Meritocracia}. En la mayoria de situaciones, son aquellas personas que ya han contribuido de manera importante y que han ganado credibilidad con respecto a sus habilidades las que son tenidas en cuenta a la hora de tomar una decision, sea cual sea la estructura de un proyecto.
+Además, otro aspecto importante en la toma de decisiones dentro de un proyecto de Software Libre es la {\bf Meritocracia}. En la mayoría de situaciones, son aquellas personas que ya han contribuido de manera importante y que han ganado credibilidad con respecto a sus habilidades las que son tenidas en cuenta a la hora de tomar una decisión, sea cual sea la estructura de un proyecto.
 
 
-\section{¿ Cómo se lleva a cabo la comunicación entre los participantes?}
+\section{¿Cómo se lleva a cabo la comunicación entre los participantes?}
 
-Debido a la naturaleza de los proyectos de software libre y a que los participantes de estos pueden trabajar desde ubicaciones muy distantes, cobra una gran importancia los distintos medios de comunicacion que se utilizan, tanto para coordinar las actividades de los integrantes del proyecto, como para comunicar de que se trata el mismo al exterior.
+Debido a la naturaleza de los proyectos de Software Libre y a que los participantes de estos pueden trabajar desde ubicaciones muy distantes, cobra una gran importancia los distintos medios de comunicación que se utilizan, tanto para coordinar las actividades de los integrantes del proyecto, como para comunicar de qué se trata el mismo al exterior.
 Se pueden utilizar los siguientes medios de comunicación: 
 
 \begin{itemize}
      \item Sitio Web o Blog: Para transmitir la información del proyecto al público en general, y dar a conocer actualizaciones, decisiones y problemas.
-     \item Listas de correo electrónico: es el mas sencillo de implementar, pero es el mas lento.
-     \item Foros: Pueden servir para publicacion de problemas, sugerencias y llevar a cabo discusiones, y tiene mucha visibilidad.
-     \item IRC: Sistema de chat en tiempo real, util para comunicarse rapidamente con los integrantes disponibles.
+     \item Listas de correo electrónico: es el más sencillo de implementar, pero es el más lento.
+     \item Foros: Pueden servir para publicación de problemas, sugerencias y llevar a cabo discusiones, y tiene mucha visibilidad.
+     \item IRC: Sistema de chat en tiempo real, útil para comunicarse rápidamente con los integrantes disponibles.
 \end{itemize}
 
-\section{¿ Como se hace disponible el codigo fuente del proyecto?}
+\section{¿Cómo se hace disponible el codigo fuente del proyecto?}
 
-Una vez comenzado un proyecto de software libre, es necesario un punto comun donde los interesados en este puedan obtener las fuentes del proyecto, tanto para utilizarlo como para poder contribuir a este.
-Para esto, actualmente se utilizan servicios de infraestructura de alojamiento del proyecto en la web, que no solo dan posibilidad de tener un lugar en el internet donde se puede tener acceso a las fuentes del proyecto, sino que brindan herramientas que facilitan la gestion del proyecto, tales como el manejo de permisos de modificacion, publicación de issues/problemas, manejo de pull requests, entre otros.
+Una vez comenzado un proyecto de Software Libre, es necesario un punto común donde los interesados en este puedan obtener las fuentes del proyecto, tanto para utilizarlo como para poder contribuir a este.
+Para esto, actualmente se utilizan servicios de infraestructura de alojamiento del proyecto en la web, que no solo dan posibilidad de tener un lugar en el internet donde se puede tener acceso a las fuentes del proyecto, sino que brindan herramientas que facilitan la gestión del proyecto, tales como el manejo de permisos de modificación, publicación de issues/problemas, manejo de pull requests, entre otros.
 \\
 \\
-En la actualidad, el servicio mas popular para este fin es {\bf GitHub}, especialmente para proyectos de fuentes abiertas. Pero tambien existen otras alternativas como {\bf GitLab, SourceForge y Bitbucket}.
+En la actualidad, el servicio mas popular para este fin es {\bf GitHub}, especialmente para proyectos de fuentes abiertas. Pero también existen otras alternativas como {\bf GitLab, SourceForge y Bitbucket}.
 
 \section{Sistemas de control de versiones}
 
-Para cualquier proyecto de software, es muy importante la implentacion de un sistema de control de versiones para poder gestionar los diversos cambios que se realizan sobre los elementos de este.
-Pero esto cobra una importancia aun mayor en proyectos de software libre, ya que aquellos que van a contribuir a estos son personas que van a tener ideas, habilidades y formas de trabajar muy distintas, por lo que la naturaleza de este va a ser mas inestable.
-Es por esto que es muy recomendable, y casi indispensable, la implementacion de sistema de control de versiones.
+Para cualquier proyecto de software, es muy importante la implementación de un sistema de control de versiones para poder gestionar los diversos cambios que se realizan sobre los elementos de este.
+Pero esto cobra una importancia aun mayor en proyectos de Software Libre, ya que aquellos que van a contribuir a estos son personas que van a tener ideas, habilidades y formas de trabajar muy distintas, por lo que la naturaleza de este va a ser más inestable.
+Es por esto que es muy recomendable, y casi indispensable, la implementación de sistema de control de versiones.
 \\
 \\
 Algunas alternativas que se utilizan son:
@@ -176,6 +171,7 @@ Algunas alternativas que se utilizan son:
     \item Mercurial
     \item Subversion    
 \end{itemize}
+
 
 \section{Control de calidad}
 
@@ -186,7 +182,7 @@ Antes que nada es importante hacer una diferenciación entre lo que es control d
      \item\textbf{Software quality assurance (QA)}: son los mecanismos que se implican en el proceso de desarrollo, verificando que se sigue unos estándares y procedimientos, y asegurando que los problemas se encuentran y se tratan adecuadamente. O sea, \textit{hacer las cosas bien a la primera}.
 \end{itemize}
 
-Además hay que tener en cuenta algunos conceptos o características relacionadas con el software libre como:
+Además hay que tener en cuenta algunos conceptos o características relacionadas con el Software Libre como:
 \begin{itemize}
      \item Modelo bazar
      \item Existencia de componentes empaquetados por un distribuidor
@@ -196,17 +192,17 @@ Además hay que tener en cuenta algunos conceptos o características relacionada
      \item Diferentes puntos de fallo
 \end{itemize}
 
-\section{Diferencias en control de calidad entre Software libre y cerrado}
+\section{Diferencias en control de calidad entre Software Libre y cerrado}
 
 En cuanto a los siguientes aspectos no hay grandes diferencias en el control de calidad respecto a proyectos cerrados:
 
 \begin{itemize}
      \item Calidad de desarrollo dentro del departamento de desarrollo: como diferencia se puede considerar que es raro es el caso en el que sean incluidas pruebas unitarias conjuntamente con el código, aún cuando facilitarían la modificación o inclusión de código posterior por parte de otros desarrolladores.
-     \item Ciclos de testing en un departamento independiente
-     \item Automatización de pruebas: actualmente gracias a herramientas de integración continua, se ha simplificado la automatización de pruebas en proyectos de software libre. Sin embargo, anteriormente las pruebas automáticas no estaban muy arraigadas. Por lo general eran los propios usuarios, dentro de la gran variedad de usos, arquitecturas y combinaciones, los que las realizaban. Esto tenía la ventaja de que se paralelizaran a un coste mínimo para el equipo de desarrollo. El problema que planteaba este modelo era cómo organizarse para que la realimentación por parte de los usuarios existiese y fuera lo más eficiente posible. 
+     \item Ciclos de testing en un departamento independiente de desarrollo
+     \item Automatización de pruebas: actualmente gracias a herramientas de integración continua, se ha simplificado la automatización de pruebas en proyectos de Software Libre. Sin embargo, anteriormente las pruebas automáticas no estaban muy arraigadas. Por lo general eran los propios usuarios, dentro de la gran variedad de usos, arquitecturas y combinaciones, los que las realizaban. Esto tenía la ventaja de que se paralelizaran a un coste mínimo para el equipo de desarrollo. El problema que planteaba este modelo era cómo organizarse para que la realimentación por parte de los usuarios existiese y fuera lo más eficiente posible. 
 \end{itemize}
 
-Posiblemente la mayor diferencia se encuentre en lo que se refiere al seguimiento de defectos, o en inglés: \textbf{bugtracking}. Debido a que los proyectos de software libre se enmarcan en la filosofía  “libere temprano, libere a menudo”, cualquier versión no ­final debería estar abierta al público. Se busca integrar al usuario en el ''ciclo de testing''. Debe ser fácil para el usuario apuntar a un defecto, el usuario no es el Departamento de Calidad: nos dice que algo falla, pero sus informes no serán de calidad. Para que el paso a una nueva entrega no sea traumático, se conforma una división del área de Calidad dedicada a los informes de usuario.
+Posiblemente la mayor diferencia se encuentre en lo que se refiere al seguimiento de defectos, o en inglés: \textbf{bugtracking}. Debido a que los proyectos de Software Libre se enmarcan en la filosofía  “libere temprano, libere a menudo”, cualquier versión no ­final debería estar abierta al público. Se busca integrar al usuario en el ''ciclo de testing''. Debe ser fácil para el usuario apuntar a un defecto, el usuario no es el Departamento de Calidad: nos dice que algo falla, pero sus informes no serán de calidad. Para que el paso a una nueva entrega no sea traumático, se conforma una división del área de Calidad dedicada a los informes de usuario.
 \\
 
 En muchos proyectos, no está claro de quién es el bug: ¿Es nuestro? ¿Es un fallo de integración? Y lo más importante: ¿corresponde al upstream? Es imprescindible para saber quién lo debe corregir.
@@ -220,5 +216,5 @@ Para realizar la distinción entre defectos se pueden usar categorías como: pro
 Además se debe tener en cuenta:
 \begin{itemize}
      \item\textbf{Equilibrio entre integración y ''añadidos''}: no reinventar la rueda, hay que reutilizar todo lo que se pueda de la distribución base. La integración se debe enviar a upstream. Si se corrige un bug que no es nuestro, es muy importante que se incluya esa corrección en upstream. Es vital poder hacer seguimiento de los defectos, aunque no sea competencia nuestra resolverlos.
-     \item\textbf{Sincronizar ciclos de desarrollo}: si bien la publicación frecuente posibilita una gran modularidad a la vez que maximiza el efecto propagandístico que tiene el hecho de publicar una nueva versión del software, la misma puede que asuste a usuarios que prioricen la estabilidad sobre la rapidez con la que el software evoluciona. Para evitarlo, algunos proyectos de software libre cuentan con varias ramas de desarrollo en paralelo. Por ejemplo, en el sistema operativo Debian se utilizan 3 ramas: una estable, otra para pruebas y otra inestable. La estable se lanza cada 2 años, con lo cual en esa rama se podría sincronizar el ciclo de desarrollo.
+     \item\textbf{Sincronizar ciclos de desarrollo}: si bien la publicación frecuente posibilita una gran modularidad a la vez que maximiza el efecto propagandístico que tiene el hecho de publicar una nueva versión del software, la misma puede que asuste a usuarios que prioricen la estabilidad sobre la rapidez con la que el software evoluciona. Para evitarlo, algunos proyectos de Software Libre cuentan con varias ramas de desarrollo en paralelo. Por ejemplo, en el sistema operativo Debian se utilizan 3 ramas: una estable, otra para pruebas y otra inestable. La estable se lanza cada 2 años, con lo cual en esa rama se podría sincronizar el ciclo de desarrollo.
 \end{itemize}
