actualizacion manual grupo 1-2018

--- a/introduccion.tex
+++ b/introduccion.tex
@@ -1,5 +1,5 @@
 \chapter{Introducción al Software Libre}
-\chapterauthor{Autor1, Autor2}
+\chapterauthor{Fernandez Manolo, Fiora Máximo, Garelli Mayco, Luna Carlos, Meichtri Fernando, Sanchez Mauricio}
 
 \section{Algo de Historia}
 
@@ -40,6 +40,18 @@ Una definición de software libre fue publicada en febrero de 1986.
 {\bf En 1985} Nace Free Software Foundation (Free Software Foundation América Latina. Fundada en el 2005)
 
 Cuyo objetivo es promover y defender el uso y desarrollo de software libre, y el derecho de las personas a usar, estudiar, copiar, modificar y redistribuir software.
+\\
+{\bf Punto de debate: ¿Es lo mismo Software libre que software gratuito?}
+{\it 
+\\
+El software libre es la denominación del software que respeta la libertad de los usuarios sobre su producto adquirido y, por tanto, una vez obtenido puede ser usado, copiado, estudiado, cambiado y redistribuido libremente.
+\\
+Una de las razones de la confusión por la que mucha gente confunde al software libre y el software gratuito proviene, como vimos, de la ambigüedad de la palabra “free” en inglés.
+\\
+También es fácil confundir al “freeware” y el “free software” debido a que el software libre suele estar disponible gratuitamente, o al precio de costo de la distribución a través de otros medios; sin embargo, no es obligatorio que así sea. Por lo tanto, no es correcto asociar software libre a “software gratuito” (denominado usualmente “freeware”), ya que un software, conservando su carácter de libre, puede ser distribuido comercialmente (“software comercial”). Análogamente, el “software gratis” o “gratuito” incluye en ocasiones el código fuente; no obstante, este tipo de software no es libre en el mismo sentido que el software libre, a menos que se garanticen los derechos de modificación y redistribución de dichas versiones modificadas del programa.
+
+}
+
 
 \section{ El Software Libre}
 
@@ -148,6 +160,7 @@ Se ha demorado mucho en ser entendido. Hacer la comparación entre software libr
 \item[$\cdot$ 1983 – Richard Stallman inicia el movimiento GNU]
 \item[$\cdot$ 1984 – Se crea el entorno gráfico X Window System]
 \item[$\cdot$ 1985 – Se funda la Free Software Fundation]
+\item[$\cdot$ 1986 – Stallman saca la licencia Copyleft]
 \item[$\cdot$ 1989 – GNU está casi completo, pero falta el núcleo]
 \item[$\cdot$ 1991 – Se inicia el desarrollo del núcleo Linux por Linus Torvalds]
 \item[$\cdot$ 1992 – Primera distribución GNU/Linux: SLS]
@@ -156,11 +169,24 @@ Se ha demorado mucho en ser entendido. Hacer la comparación entre software libr
 \item[$\cdot$ 1996 – Inicio del proyecto KDE]
 \item[$\cdot$ 1997 – Inicio del movimiento Open Source. Creación de la OSI. Inicio del proyecto GNOME]
 \item[$\cdot$ 1998 – Netscape es liberado como software libre]
+\item[$\cdot$ 2001 – Se crea la Wikipedia]
 \item[$\cdot$ 2002 – Creación de Gentoo y Linex]
 \item[$\cdot$ 2003 – Creación de Knoppix y Fedora Core]
 \item[$\cdot$ 2004 – Creación de Ubuntu]
 \item[$\cdot$ 2005 - Git creado por Linus Torvalds]
+\item[$\cdot$ 2008 - Aparición de Github]
+\item[$\cdot$ 2010 - Ley aprobada en la región de Piamonte Italia]
+\item[$\cdot$ 2016 - Microsoft se une a la fundación linux]
 \end{description}
+
+\section{Leyes que favorecieron al software libre}
+
+{\bf Ley aprobada en la región de Piamonte Italia}
+\\
+\\
+En 2010 el Consejo Regional de Piamonte, una región nordoccidental de Italia, que limita con Suiza al norte y con Francia al oeste, aprobaba una Ley, que establecía que se favorecerá a los programas pertenecientes a la categoría del software libre y a los programas en los que el código es inspeccionable por el licenciatario.
+La elección fue acogida con entusiasmo por los partidarios del Software Libre y una gran parte de la sociedad civil, mientras que la Presidencia del Consejo de Ministros impugnaba esta norma, pidiendo al Tribunal Constitucional que la declarara ilegal. Pero el Tribunal a cargo del juicio dictaminó que la preferencia por el software Libre es legal y respeta el principio de la libre competencia.
+Como veredicto determinaron que, preferir Software Libre no infringe la libertad de competencia, ya que la libertad del software es una característica jurídica de carácter general y no una característica tecnológica ligada a un producto o marca específica. Esta sentencia expuso la inconsistencia de los argumentos que, durante mucho tiempo, se han opuesto a la adopción de normas que favorezcan la utilización de Software Libre argumentando que están en conflicto con el principio de "neutralidad tecnológica".
 
 
 \section{Aspectos Históricos del Software Libre en América Latina}
